# openwalnut

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  CONTRIBUTORS  README-orig.md  README.md
doc/developer/: doxygenConfig  doxygenConfigFull
doc/examples/: dvr.owp  lines.owp
doc/user/: walnut.cfg.devel  walnut.cfg.official
resources/projects/: example_DVR.owp  example_isosurface.owp
resources/scripting/: template.py  template_python3.py
src/: CMakeLists.txt  OpenWalnut.cpp  README.Reformed_dataHandler  version.h
src/common/: CMakeLists.txt  WAssert.cpp  WBoundingBox.cpp  WColor.cpp  WCondition.cpp  WConditionOneShot.cpp  WConditionSet.cpp  WException.cpp  WFlag.cpp  WFlagForwarder.cpp  WHierarchicalTree.cpp  WHierarchicalTree.h  WHierarchicalTreeFibers.cpp  WHierarchicalTreeFibers.h  WHistogram.cpp  WHistogramBasic.cpp  WIOTools.cpp  WItemSelection.cpp  WItemSelectionItem.cpp  (+38 more)
src/gui/: CMakeLists.txt  WCustomWidget.cpp  WGUI.cpp
src/gui/qt4/: CMakeLists.txt  WCfgOperations.cpp  WIconManager.cpp  WMainWindow.cpp  WMainWindow.h  WQt4Gui.cpp  WQtCombinerActionList.cpp  WQtCombinerToolbar.cpp  WQtCombinerToolbar.h  WQtConfigWidget.cpp  WQtCustomDockWidget.cpp  WQtGLWidget.cpp  WQtNavGLWidget.cpp  WQtStatusBar.cpp  WQtStatusBar.h  WQtToolBar.cpp
src/gui/qt4/controlPanel/: WPropertyBoolWidget.cpp  WPropertyColorWidget.cpp  WPropertyDoubleWidget.cpp  WPropertyFilenameWidget.cpp  WPropertyIntWidget.cpp  WPropertyPositionWidget.cpp  WPropertySelectionWidget.cpp  WPropertyStringWidget.cpp  WPropertyTriggerWidget.cpp  WPropertyWidget.cpp  WQtBranchTreeItem.cpp  WQtControlPanel.cpp  WQtDatasetTreeItem.cpp  WQtModuleHeaderTreeItem.cpp  WQtModuleTreeItem.cpp  WQtModuleTreeItem.h  WQtPropertyGroupWidget.cpp  WQtRoiHeaderTreeItem.cpp  WQtRoiTreeItem.cpp  WQtRoiTreeItem.h  WQtSubjectTreeItem.cpp  WQtTextureSorter.cpp  WQtTreeItem.cpp  WQtTreeWidget.cpp
src/gui/qt4/events/: WEventTypes.h  WLogEvent.cpp  WLogEvent.h  WModuleAssocEvent.cpp  WModuleConnectEvent.cpp  WModuleCrashEvent.cpp  WModuleDeleteEvent.cpp  WModuleDisconnectEvent.cpp  WModuleReadyEvent.cpp  WModuleRemovedEvent.cpp  WOpenCustomDockWidgetEvent.cpp  WPropertyChangedEvent.cpp  WRoiAssocEvent.cpp  WRoiRemoveEvent.cpp  WUpdateStatusBarEvent.cpp  WUpdateStatusBarEvent.h  WUpdateTextureSorterEvent.cpp
src/gui/qt4/guiElements/: WQtModuleOneToOneCombinerAction.cpp  WQtPropertyBoolAction.cpp  WQtPushButton.cpp  WQtStatusIcon.cpp  WQtStatusIcon.h
src/gui/qt4/platformDependent/: WQtGLWidgetAll.cpp  WQtGLWidgetAll.h
src/gui/qt4/ribbonMenu/: WQtMenuPage.cpp  WQtRibbonMenu.cpp
src/kernel/: CMakeLists.txt  WBatchLoader.cpp  WCrosshair.cpp  WFiberSelector.cpp  WFiberSelector.h  WKdTree.cpp  WKernel.cpp  WModule.cpp  WModuleCombiner.cpp  WModuleCombinerTypes.cpp  WModuleConnector.cpp  WModuleConnectorSignals.cpp  WModuleContainer.cpp  WModuleFactory.cpp  WModuleInputConnector.cpp  WModuleInputData.cpp  WModuleInputForwardData.cpp  WModuleLoader.cpp  WModuleLoader.h  WModuleOutputConnector.cpp  WModuleOutputData.cpp  WModuleOutputForwardData.cpp  WModuleSignals.cpp  WModuleTypes.cpp  WProjectFile.cpp  WPrototypeRequirement.cpp  WRMBranch.cpp  WROIManager.cpp  WRoiProjectFileIO.cpp  WSelectionManager.cpp  WSelectionManager.h  WSelectorBranch.cpp  WSelectorRoi.cpp
src/kernel/combiner/: WApplyCombiner.cpp  WDisconnectCombiner.cpp  WModuleOneToOneCombiner.cpp  WModuleProjectFileCombiner.cpp
src/kernel/exceptions/: WKernelException.cpp  WModuleAlreadyAssociated.cpp  WModuleConnectionFailed.cpp  WModuleConnectionInvalid.cpp  WModuleConnectorInitFailed.cpp  WModuleConnectorNotFound.cpp  WModuleConnectorUnconnected.cpp  WModuleConnectorsIncompatible.cpp  WModuleDisconnectFailed.cpp  WModuleException.cpp  WModuleRequirementNotMet.cpp  WModuleSignalSubscriptionFailed.cpp  WModuleSignalUnknown.cpp  WModuleUninitialized.cpp  WPrototypeNotUnique.cpp  WPrototypeUnknown.cpp
src/kernel/modules/data/: WMData.cpp  WMData.h  WReaderNIfTI.cpp  WReaderNIfTI.h
src/kernel/modules/fiberDisplay/: WMFiberDisplay.cpp  WMFiberDisplay.h  WTubeDrawable.cpp  WTubeDrawable.h  WTubeGeometry.cpp  WTubeGeometry.h
src/kernel/modules/fiberDisplay/shaders/: WMFiberDisplay-FakeTubes-PS-fragment.glsl  WMFiberDisplay-FakeTubes-PS-vertex.glsl  WMFiberDisplay-FakeTubes-QS-fragment.glsl  WMFiberDisplay-FakeTubes-QS-vertex.glsl  WMFiberDisplay-FakeTubes-fragment.glsl  WMFiberDisplay-FakeTubes-vertex.glsl
src/kernel/modules/navSlices/: WMNavSlices.cpp
src/kernel/modules/navSlices/shaders/: WMNavSlices-simple-fragment.glsl
src/newDataHandler/: CMakeLists.txt  WDataAccess.cpp  WDataAccess.h  WDataArray.cpp  WDataArray.h  WDataSet.cpp  WDataSet.h  WDataSet2.cpp  WDataSet2.h  WDataSetAccessor.cpp  WDataSetAccessor.h  WDataSetVisitor.cpp  WDataSetVisitor.h  WGridRegular3D2.cpp  WGridRegular3D2.h  WGridRegular3D2Specializations.cpp  WGridRegular3D2Specializations.h  WIndexMap.cpp  WIndexMap.h  WInterpolationTypes.cpp  WInterpolationTypes.h  WInterpolator.cpp  WInterpolator.h  WNeighborhood.cpp  WNeighborhood.h  WNeighborhoodIterator.cpp  WNeighborhoodIterator.h  WScalar.cpp  WScalar.h  WScalarBaseImpl.cpp  WScalarBaseImpl.h  WSliceIterator.cpp  WSliceIterator.h  WStillNeedsAName.cpp  WStillNeedsAName.h  WTypeInterpolatorStandard.cpp  WTypeInterpolatorStandard.h  WValueMapper.cpp  WValueMapper.h  WValueSet.cpp  (+7 more)
src/newDataHandler/reader/: WReader.cpp  WReader.h  WReader2.cpp  WReader2.h
src/newDataHandler/structuralTypes/: CMakeLists.txt  WMatrixFixedStructural.cpp  WMatrixFixedStructural.h  WParameterTypes.cpp  WParameterTypes.h  WScalarStructural.cpp  WScalarStructural.h  WStructuralTypes.cpp  WStructuralTypes.h  WVectorFixedStructural.cpp  WVectorFixedStructural.h
src/newDataHandler/structuralTypes/test/: WStructuralTypes_test.h
src/newDataHandler/test/: WDataAccess_test.h  WDataArray_test.h  WDataSetVisitor_test.h  WGridRegular3D2_test.h  WNeighborhoodIterator_test.h  WScalar_test.h  WSliceIterator_test.h  WVoxelIterator_test.h
tools/: build_msys2.bash  createPCH.py  generateModuleTemplate.pl  shaderValidator.py  shaderValidator.sh
(+1371 files in other folders)
