ADD_SUBDIRECTORY( qt4 )

FILE( GLOB GUI_SRC "*.cpp" "*.h" )

SET( LIB_NAME "${OWguiName}" )

SET( ${LIB_NAME}_COMBINER_SRC ${GUI_SRC} )
SET( ${LIB_NAME}_ALL_CPP ${GUI_SRC} )
FILE( GLOB_RECURSE ${LIB_NAME}_REMOVE_H "*.h"  )
FILE( GLOB_RECURSE ${LIB_NAME}_REMOVE_PCH "*${LIB_NAME}_PCH.*" )

LIST( REMOVE_ITEM ${LIB_NAME}_ALL_CPP ${${LIB_NAME}_REMOVE_H} )


CLEAN_PCH_IF_NECESSARY( ${LIB_NAME} ${LIB_NAME}_COMBINER_SRC )

IF( OW_BUILD_AS_ONE_BIG_FILE )
	SET( UNITY_BUILD_FILE_NAME "${LIB_NAME}UnityBuildFile.cpp" )
	GENERATE_UNITY_BUILD_FILE( ${LIB_NAME}_ALL_CPP )
	
	ADD_LIBRARY( ${LIB_NAME} ${UNITY_BUILD_FILE_NAME} ${${LIB_NAME}_COMBINER_SRC} )
ELSE( OW_BUILD_AS_ONE_BIG_FILE )
    IF( OW_BUILD_WITH_PCH )
        CREATE_PCH_NOT_SHARED( ${LIB_NAME} ${LIB_NAME}_COMBINER_SRC ${LIB_NAME}_ALL_CPP ${LIB_NAME}_ALL_CPP )
    ENDIF( OW_BUILD_WITH_PCH )
ENDIF( OW_BUILD_AS_ONE_BIG_FILE )

IF( NOT OW_BUILD_WITH_PCH AND NOT OW_BUILD_AS_ONE_BIG_FILE )
    ADD_LIBRARY( ${LIB_NAME} ${${LIB_NAME}_COMBINER_SRC} )
ENDIF( NOT OW_BUILD_WITH_PCH AND NOT OW_BUILD_AS_ONE_BIG_FILE )

TARGET_LINK_LIBRARIES( ${LIB_NAME} ${OWCommonName} )

IF( OW_BUILD_WITH_PCH AND ( NOT OW_BUILD_AS_ONE_BIG_FILE ) AND CMAKE_COMPILER_IS_GNUCXX )
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
    ADD_PRECOMPILED_HEADER( ${LIB_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${LIB_NAME}_PCH.h )  
ENDIF( OW_BUILD_WITH_PCH AND ( NOT OW_BUILD_AS_ONE_BIG_FILE ) AND CMAKE_COMPILER_IS_GNUCXX )

IF(MSVC_IDE)
    SET_TARGET_PROPERTIES( ${LIB_NAME} PROPERTIES PREFIX "../")
ENDIF(MSVC_IDE)

# Unit tests
IF( OW_COMPILE_TESTS )
  CXXTEST_ADD_TESTS_FROM_LIST( "${GUI_SRC}"
                               "${OWCommonName}"
                               "WGUI.cpp"
                             )
ENDIF( OW_COMPILE_TESTS )
